all: move to using npins for pinning dependencies
I've deleted all of my system's Nix channels. Running these commands
will now use the dependencies pinned by npins instead of depending on
channels:

    sudo env NIX_PATH="$NIX_PATH" nixos-rebuild ...
    home-manager ...

Note that this only works if you run inside the shell defined by this
repository's `shell.nix`.

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,5 @@
 use nix
+watch_file npins/default.nix
 
 # HACKY: configure git to look at our .githooks folder; this doesn't really
 # match the intended use case of direnv, but it should maybe have smooth
