direnv: properly watch npins sources.json
Previously, we only watched `default.nix`, but this file doesn't
actually change when the pins move. Instead, we want to watch
`sources.json`.

--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,6 @@
 use nix
 watch_file npins/default.nix
+watch_file npins/sources.json
 
 # HACKY: configure git to look at our .githooks folder; this doesn't really
 # match the intended use case of direnv, but it should maybe have smooth
