--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,7 @@
 use nix
 watch_file npins/default.nix
 watch_file npins/sources.json
+watch_file npins/nixpath.nix
 
 # HACKY: configure git to look at our .githooks folder; this doesn't really
 # match the intended use case of direnv, but it should maybe have smooth
